4K display queries, styling fixes, mobile overflow fix, changed second marquee scroll direction

--- a/landing-page.css
+++ b/landing-page.css
@@ -220,7 +220,7 @@ section.main-background {
     margin:1rem;
     padding:0.5rem 3rem;
     border:none;
-    border-radius: 2px;
+    border-radius: 6px;
     color:white;
     font-size: 2rem;
     letter-spacing: 1px;
@@ -236,6 +236,7 @@ section.main-background {
     z-index: 100;
     height:100%;
 }
+#who, #contact {overflow: hidden;}
 footer {
     position: relative;
     bottom:0;
